--- a/Lab1_Kotlin_xml/app/src/main/res/values/themes.xml
+++ b/Lab1_Kotlin_xml/app/src/main/res/values/themes.xml
@@ -1,9 +1,5 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.TDDC73Lab1" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
-    </style>
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
 
-    <style name="Theme.TDDC73Lab1" parent="Base.Theme.TDDC73Lab1" />
+    <style name="Theme.Lab1_kotlin_compose" parent="android:Theme.Material.Light.NoActionBar" />
 </resources>
