--- a/Lab1_Kotlin_xml/app/src/main/res/layout/activity_main.xml
+++ b/Lab1_Kotlin_xml/app/src/main/res/layout/activity_main.xml
@@ -87,9 +87,8 @@
             android:layout_width="340dp"
             android:layout_height="wrap_content"
             android:contentDescription="Enter email"
-            android:inputType="text"
             android:ems="10"
-            />
+            android:inputType="text" />
     </LinearLayout>
 
     <LinearLayout
